# php-ext

./: .gitignore  CMakeLists.txt
hello/: hello.c  hello.h  main.c
hello-lib/: library.c  library.h
php_hello/: config.m4  config.w32  php_hello.c  php_hello.dep  php_php_hello.h
php_hello/tests/: 001.phpt  002.phpt  003.phpt
